--- a/_posts/2018-08-20-bananas.md
+++ b/_posts/2018-08-20-bananas.md
@@ -3,6 +3,8 @@ layout: post
 author: jill
 ---
 
+{{layout}}
+
 A banana is an edible fruit – botanically a berry – produced by several
 kinds of large herbaceous flowering plants in the genus Musa.
 
