--- a/_posts/2022-04-05-thankful.md
+++ b/_posts/2022-04-05-thankful.md
@@ -3,7 +3,12 @@ layout: post
 author: Riley
 title: I'm Thankful for April 5th, 2022
 subtitle: Things I'm thankful for today
+image: thankful
 date: 2022-04-05 18:32
 ---
 
 I am thankful for [my emotional resilience class](https://www.churchofjesuschrist.org/study/manual/emotional-resilience-for-self-reliance?lang=eng){:target="_blank"} that helps me develop healthy relationships.
+
+* * *
+
+Photo in header from [PXFuel](https://www.pxfuel.com/en/free-photo-orwoa){:target_"blank"}
