--- a/_posts/2022-04-05-thankful.md
+++ b/_posts/2022-04-05-thankful.md
@@ -3,6 +3,7 @@ layout: post
 author: Riley
 title: I'm Thankful for April 5th, 2022
 subtitle: Things I'm thankful for today
+tags: [gratitude, relationships, self-reliance]
 image: thankful
 date: 2022-04-05 18:32
 ---
