--- a/_drafts/2023-11-21-thankful.md
+++ b/_drafts/2023-11-21-thankful.md
@@ -3,3 +3,7 @@ Recently I was in a meeting, and someone brought up a wonderful video on gratitu
 Video
 
 During the pandemic, a heart surgeon and spiritual leader gave for spiritual sickness, emotional sickness, and the other illnesses of the world an antidote: gratitude. In the video, he encouraged gratitude to God even in the trying time of the pandemic. Because of this, I wanted to give thanks for what God has given me. I want to encourage you to write and share what you are thankful for with your family or loved ones.
+
+I am thankful for a warm bus to take me home in the cold weather.
+I am thankful for food that is available to me so I have enough to eat.
+I am thankful to be able to feel God's love for me and to be able to share it with others.
